Fixed pathboost globals, previously they would only target mages that had the appropriate path already (thanks to Waylander for pointing this out)
Changed the details text for pathboost globals to correctly reflect the fact that they can only boost up to X4, not X5 as stated.
Fixed nature pathboost globals instead providing boosts in Death!

v3.1.0

Fixed secondary effects not correctly applying to commanders after the previous changes to research level increments. Hopefully invisible sages will generate now.
Reduced odds of most human mage ritual summons to account for this, as with this fixed they really dominated conjuration.
Commander corpse eater increased from 2 corpses/turn to 5.
Size affecting summon modifiers now partially respect a commander's magic paths with pricing. Titan sized versions of human mages used to cost about +10 gems, they are now more expensive based on the path depth of the mage.
The extra range modifier now only applies to spells with 10+ precision.
Improved precision now only applies to spells with -5+ precision.
Wish for strength permanent bonus research level reduced from 7 to 4, gem cost reduced from 10 to 5
All plane returning permanent bonus cost reduced from 8 to 3.
Increased the damage of fire and cold projectile evocation from 9++ to 12++.
Increased the damage of fire and cold instant evocation from 6++ to 16++.
Fireball fatigue is now aoe 5, from aoe 1.
Added an analogous cold fatigue effect to cold projectile evos.
Cold evocations are no longer available to death.
Banefire projectile decay aoe increased from 1 to 5.
Many permanent effects can now be targeted at other commanders.
Added new permanent effects: blood surge, cold weapons, fateweaving, death weapons, withering weapons, fire shield, astral shield, sleep aura, reforming, protective force, awe, acid shield, slimer, banefire shield, thunder weapons, poison weapons, vine shield effect.